TBD - 0.9.4
- Syncronize RX Freq with the satellite downlink combobox.
- Bugfix: When adding a QSO, if the QSL is marked as received, KLog showed a SQL error.

April - 0.9.3
- Double clicking on DXCC Widget name of the Entity will show the QSO is providing that status on the Search widget.
- Added DXCC support for Kosovo.
- Bugfix: Default band & mode are now defined as the most used band and mode.
- Bugfix: TX frequency was not saved.
- Bugfix: In the dxcc status widget, some countries were showing the UN flag unappropriately.
- Bugfix: When updating the CTY file, query errors were shown on world.readCTYCSV function.
- Bugfix: When editing the QRZ, the cursor position was not properly maintained.
- Bugfix: Fixed the flags of several DXCC entities that were not correctly shown.
- Bugfix: DXCC Status widget was not listing all the DX entities.
- Bugfix: Modes & Bands where not always properly updated from the Setup.
- Bugfix: Adding new QSO that implies a DXCC or WAZ status already worked failed.
- Bugfix: Updating the WAZ status was not always possible due to a incorrect DB query.
- Updated translations: Danish (TNX Joe), Spanish (EA4TV).

January - 0.9.2.9
- Bugfix: Adding new QSO that implies a DXCC or WAZ status already worked failed.
- Bugfix: Modes where not properly added from the setup (TNX KB2YSI).
- UI Change: Freq in the Satellite tab is now not deleted when a new QSO is added.
- New translation: Catalan by Josep (Thank you!)
- New translation: Finnish by Kristjan (Thank you!)

January - 0.9.2.8
- Important Optimization on KLog speed on start and general use.
- New satellites (AO-91 & AO-92) added.
- Added ALL the ADIF 3.0.7 fields (except the _INTL ones).
- New feature: New menus to export ADIF files for LoTW and manage LoTW status.
- GUI: Implemented an error reporting for the users for main errors
- GUI: When a satellite is selected the main bands are automatically proposed.