@@ -40,7 +40,7 @@
 class QSqlRelationalTableModel;
 
 // Previous db update 0.011
-const float DBVersionf = 0.012; // TODO:
+const float DBVersionf = 0.013; // TODO:
 
 struct AwarddxccEntry
 { // Information to update the awarddxcc table; For other Award tables, the DXCC is just the ID of the award element
@@ -147,6 +147,7 @@ private:
     bool updateTo010(); // Updates DB and recreates the supportedcontest table
     bool updateTo011(); // Updates DB and recreates Satellite data
     bool updateTo012(); // Updates the flags and so on.
+    bool updateTo013(); // Update the qsl_via_enumeration bug caused for calling the table just qsl_via
     bool updateTableLog(const int _v);
     bool updateDBVersion();
 
@@ -192,6 +193,9 @@ private:
     bool populateContestData();
 
     bool populateTableSupportedContest();
+
+    bool createTableQSL_Via_enumeration();
+    bool populateTableQSL_Via_enumeration();
 
     bool howManyQSOsInLog(const int i);
     //void showError();
